--- a/desafio015.html
+++ b/desafio015.html
@@ -5,45 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Redes Sociais</title>
     <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon">
-    <style>
-        * {
-            margin: 0px;
-            padding: 0px;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        html, body {
-            height: 100vw;
-            width: 100vw;
-            background-color: black;
-        }
-        body {
-            background: url('imagens/fundo-madeira.jpg') no-repeat top center;
-            background-size: cover;
-            background-attachment: fixed;
-        }
-        main {
-            height: 100vh;
-            position: relative;
-        }
-        section#telefone {
-            height: 627px;
-            width: 311px;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: url('imagens/frame-iphone.png') no-repeat;
-        }
-    </style>
+    <link rel="stylesheet" href="estilo/style1.css">
 </head>
 <body>
     <main>
         <section id="telefone">
-
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">Seu navegador não é compatível com isso.</iframe>
         </section>
-        <section id="redes sociais">
-
+        <section id="redes-sociais">
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a><br>
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a><br>
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+            <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a><br>
         </section>
     </main>
 </body>
